name:                zb
version:             0.1.0.0
synopsis:            !
description:         ?
homepage:            http://github.com/kivikakk/zb#readme
license:             BSD3
license-file:        LICENSE
author:              Yuki Izumi
maintainer:          yuki@kivikakk.ee
copyright:           2015 Yuki Izumi
category:            Nope
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Parser
                     , Compiler
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , text
                     , containers
                     , mtl
  default-language:    Haskell2010

executable zb
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , zb
                     , containers
  default-language:    Haskell2010

test-suite zb-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , zb
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kivikakk/zb
